--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # CMake
 build/
 cmake-build-*/
+out/
 
 # CLion
 *.iml
@@ -13,3 +14,6 @@ cmake-build-*/
 
 # VSCode / VSCodium
 .vscode/
+
+# Visual Studio
+.vs/
