:sparkles: stuff from day 1

--- a/src/fiddle/CMakeLists.txt
+++ b/src/fiddle/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(fiddle_impl STATIC fiddle.hxx fiddle.cxx)
-target_link_libraries(fiddle_impl PUBLIC GSL CONAN_PKG::range-v3)
+target_link_libraries(fiddle_impl PUBLIC GSL)
 
 add_executable(fiddle main.cxx)
 target_link_libraries(fiddle PRIVATE fiddle_impl)
