:sparkles: added game of life exercise

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(fiddle)
 add_subdirectory(01-fizzbuzz)
 add_subdirectory(02-linked-list)
 add_subdirectory(03-point)
+add_subdirectory(04-game-of-life)
