:sparkles: added gilded rose refactoring kata

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(01-fizzbuzz)
 add_subdirectory(02-linked-list)
 add_subdirectory(03-point)
 add_subdirectory(04-game-of-life)
+add_subdirectory(05-gilded-rose)
